methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:10: error: reassignment to val
 biscuit = estSurBiscuit()
         ^SlugHunting:14: error: reassignment to val
 bonChemin = isFacingTrail()
           ^SlugHunting:18: error: not found: value levebrosse
   levebrosse()
   ^SlugHunting:28: error: reassignment to val
 caseVerte = false
           ^SlugHunting:34: error: reassignment to val
     caseVerte = true
               ^