methods.slug.SlugHunting.scala.code
val bonChemin = false
val caseVerte = false
val biscuit = false


def hunt() {
 setCouleurBrosse(Color.gray)
 leveBrosse()
 biscuit = estSurBiscuit()
 if ( biscuit){
    prendBiscuit()
 } 
 bonChemin = isFacingTrail()
 if(bonChemin){
   avance()
   baisseBrosse()
   levebrosse()
  } else {
    gauche()
 }  
}

// Copy your isFacingTrail() here


def isFacingTrail():Boolean = {
 caseVerte = false
 if (estFaceMur()){
    return caseVerte
 } else {
   avance()
   if (getCouleurSol() == Color.green ){
     caseVerte = true
   } 
   recule()
 }
 return caseVerte
}